# UBI-EI

./: .gitignore  README.md  packages.txt
First-Year/1st-Semester/Tecnologia de Computadores/: Exercicio2Jogadores4bits.circ  ExercicioCaixasCamiao.circ  TestePratico2_Rafa.circ
First-Year/2nd-Semester/Redes-de-Computadores/Práticas/: DNS, DHCP and Web Servers.pkt  VLANs with Multiple Interfaces.pkt  VLANs.pkt
First-Year/First-Semester/Laboratórios de Programação/: project-01.tex
First-Year/First-Semester/Laboratórios de Programação/Project-04/: project-04.aux
First-Year/First-Semester/Laboratórios de Programação/Project-05/: project-05.toc
First-Year/First-Semester/Programação/Help Others/: Leo.c  Marta.c
First-Year/First-Semester/Tecnologia de Computadores/: (!ABC)+(A!BC)+(AB!C).circ  Exercicio2Jogadores4bits.circ  Teorica_9.circ  class-02.circ
Help Others/Leo GF/: Doxyfile  rrefPython.py
Help Others/Leo GF/src/: rrefPython.py
Help Others/Sara/: maior.c
OneDrive - Universidade da Beira Interior/: .849C9593-D756-4E56-8D6E-42412F2A707B  desktop.ini
f_year/f_semester/Tecnologia de Computadores/: 1Freq-PL1.circ  ExercicioImpossiveisNAND_NOR.circ  RandomNORCircuit.circ  class-01.circ
f_year/s_semester/Arquitetura de Computadores/Práticas/: loops.ASM
f_year/s_semester/Redes-de-Computadores/Práticas/: DNS, DHCP, Web and Email Servers.pkt  IPv4-Simple-Network.pkt  Static Routes.pkt
f_year/s_semester/ac/: capitulo-2.tex  capitulo-4.tex  conc-trab-futuro.tex
f_year/s_semester/ac/Práticas/: aula1.ASM  aula2.ASM  aula3.ASM  aula3_2.ASM  aula4.ASM  aula4_2.ASM  aula5.ASM  aula6.ASM  aula6.COM  aula7.ASM  aula7_2.ASM  aula7_3.ASM  hello_world.ASM  modografico.txt  setas.ASM  setas.COM
f_year/s_semester/ac/template_relatorio/: agradecimentos.tex  capa.tex  capitulo-5.tex
f_year/s_semester/pf/material/: ficha_ocaml_listas_vetores.html
f_year/s_semester/rc/Práticas/: Switches and Routers - Configuration.pkt  VLANs.pkt
f_year/s_semester/rc/template/: acronimos.aux  agradecimentos.aux  capa.aux  capitulo-2.aux  capitulo-3.aux  capitulo-3.tex  capitulo-4.aux  capitulo-5.aux  capitulo-6.aux  conc-trab-futuro.aux  introducao.aux  introducao.tex  relatorio-projeto.aux  relatorio-projeto.out  relatorio-projeto.tex  relatorio-projeto.toc
f_year/s_semester/rc/trabalho_teorico/: acronyms.aux  acronyms.tex  chap-2.aux  chap-3.aux  chap-4.aux  chap-5.aux  chap-6.aux  conc-trab-futuro.aux  cover.aux  cover.tex  introduction.aux  introduction.tex  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  references.bib
relatorio_template/: main.aux  main.out  main.tex  main.toc
relatorio_template/frontmatter/: cover.aux  cover.tex  introduction.aux  introduction.tex
relatorio_template/mainmatter/: configurations.aux  configurations.tex  ipManagement.aux  ipManagement.tex
s_year/f_semester/db/FreqPractice/: practice.sql
s_year/f_semester/db/Practical Work/: dbScripts.txt  exemplo-aplicacao-frontend-bd (1).py
s_year/f_semester/db/class01/: scripts.txt
s_year/f_semester/multimedia/class01/: class01.py
s_year/f_semester/multimedia/class02/: class02.py
s_year/f_semester/multimedia/class03/: Aula3_ini.py  class03.py
s_year/f_semester/multimedia/class04/: Aula4_ini.py  class04.py
s_year/f_semester/multimedia/class05/: class05.py
s_year/f_semester/multimedia/class10/: aula_10_ini.py  class10.py
s_year/f_semester/poo/: FinalProject.rar
s_year/f_semester/poo/EventManager/: .project
s_year/f_semester/poo/Freq2_2024_25/: .project
s_year/f_semester/poo/Freq2_Practice/: .project
s_year/f_semester/poo/Freq2_Practice2/: .project
s_year/f_semester/poo/class00/: .project
s_year/f_semester/poo/class003Import/: .classpath  .project
s_year/f_semester/poo/class03/: .classpath
s_year/f_semester/poo/class06-2/: .project
s_year/f_semester/poo/class07/: .project
s_year/f_semester/poo/class08/: .project
s_year/f_semester/poo/class10/: .project
s_year/f_semester/poo/class11/: .project
s_year/f_semester/poo/class12/: .project
s_year/f_semester/poo/test/: .project
s_year/s_semester/algoritmos/freq_2024/: main  main.c
s_year/s_semester/algoritmos/lib/: Aleatorio.h
s_year/s_semester/algoritmos/practical_classes/: introduction.c  introduction.h
s_year/s_semester/algoritmos/practical_exam_2024/: OperacoesExA.h
s_year/s_semester/algoritmos/practical_test1_2024/: main  main.c
s_year/s_semester/logica/: a.pl
s_year/s_semester/logica/lab01/: socios.pl  video_vhs.pl
s_year/s_semester/logica/lab02/: sobre.pl
s_year/s_semester/logica/lab03/: lab03.pl  macaco.pl
s_year/s_semester/logica/lab03-listas/: lab03.pl
s_year/s_semester/logica/lab04/: lab04.pl
s_year/s_semester/logica/lab05/: lab05.pl
s_year/s_semester/logica/listas/: practice.pl
s_year/s_semester/logica/practical_test_01/: practical_01.pl
s_year/s_semester/logica/practical_test_02/: practical_02.pl
s_year/s_semester/logica/practical_test_03/: practical_03.pl
s_year/s_semester/logica/trees/: trees.pl
s_year/s_semester/so/practice/: a  threads.c
s_year/s_semester/so/resources/: threads.c
t_year/f_semester/es/lab01/: lab01.txt
t_year/f_semester/gc/template/: test
t_year/f_semester/ia/: .gitignore
t_year/f_semester/tc/: .gitignore  test.ml
t_year/f_semester/tc/nfa2nfa/test/: dune  dune_tests.txt  test01.in  test01.out  test02.in  test02.out  test03.in  test03.out  test04.in  test04.out  test05.in  test05.out  test06.in  test06.out  test07.in  test08.in  test08.out  test09.in  test10.in  test10.out  test11.in  test12.in  test12.out  test13.in  test13.out  test14.in  test14.out  test15.in  test15.out  test16.in  test16.out  test17.in  test17.out  test18.in  test18.out  test19.in  test19.out  test20.in  test20.out  testepsilon.in  (+2 more)
t_year/f_semester/tc/s1tm/test/: dune  test02.in  test03.in  test04.in  test05.exp  test05.in  test06.in  test07.in  test08.in  test09.in  test10.in  test11.in  test12.in  test13.in  test14.in  test15.in  test16.in  test17.in  test18.in
template_relatorio/: acronimos.tex  relatorio-projeto.tex
(+626 files in other folders)
